option java_package = "org.locationtech.geowave.adapter.vector.query.hbase.generated";
option java_outer_classname = "FilterProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message CqlHBaseQueryFilter {
  required string gtFilter = 1;
  required bytes model = 2;
  required bytes dataAdapter = 3;
}
