option java_package = "mil.nga.giat.geowave.datastore.hbase.coprocessors.protobuf";
option java_outer_classname = "FilterProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message SingleEntryFilter {
  required bytes adapterId = 1;
  required bytes dataId = 2;
}
